Code refactoring and add dependencies